[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cartesia"
version = "0.1.0"
description = "Hybrid C++/Python Geometric Modeling Tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "PyQt5"
]

[tool.setuptools.packages.find]
# This tells pip to look for python packages inside your 'scripts' folder
where = ["scripts"]
